--- a/SupportManagementSystem/SMS.Web/Views/Shared/_Layout.cshtml
+++ b/SupportManagementSystem/SMS.Web/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @if (User.IsInRole("Administrator"))
+                    {
+                        <li>
+                         @Html.ActionLink("Register Support Agent", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })
+                        </li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
