--- a/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Account/Register.cshtml
+++ b/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Account/Register.cshtml
@@ -1,11 +1,11 @@
-﻿@model SMS.Web.Models.RegisterViewModel
+﻿@model SMS.Web.Areas.Administrator.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Register", "Account", new { area = "Administrator"}, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Create a new Support Agent account.</h4>
