--- a/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Shared/_Layout.cshtml
+++ b/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li>
                             @Html.ActionLink("Register Support Agent", "Register", "Account", new { area = "Administrator" }, htmlAttributes: new { id = "registerLink" })
                         </li>
+                       <li>
+                           @Html.ActionLink("Show User Information", "ShowUser", "Account", new { area = "Administrator" }, null)
+                       </li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
