--- a/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Account/ShowUser.cshtml
+++ b/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Account/ShowUser.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿
+@model SMS.Web.Areas.Administrator.Models.UserViewModel
+
+@{
     ViewBag.Title = "Users' Profile";
 }
 
@@ -15,7 +18,7 @@
             <tr>
                 <td>
                     @item.Email &nbsp; &nbsp; &nbsp;
-                </td>              
+                </td>
                 <td>
                     @item.PhoneNumber &nbsp; &nbsp; &nbsp;
                 </td> &nbsp; &nbsp; &nbsp;
