--- a/SupportManagementSystem/SMS.Web/Views/Shared/_Layout.cshtml
+++ b/SupportManagementSystem/SMS.Web/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     @if (User.IsInRole("Administrator"))
                     {
                         <li>
-                            @Html.ActionLink("Admin Panel", "Panel", "Admin", new { area = "Administrator"}, null)
+                            @Html.ActionLink("Users", "Users", "Admin", new { area = "Administrator"}, null)
                         </li>
                         <li>
                             @Html.ActionLink("Register Support Agent", "Register", "Account", new { area = "Administrator" }, htmlAttributes: new { id = "registerLink" })
