--- a/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Admin/EditEmail.cshtml
+++ b/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Admin/EditEmail.cshtml
@@ -1,22 +1,22 @@
-﻿@model SMS.Web.Areas.Administrator.Models.UserViewModel
+﻿
+@model SMS.Web.Areas.Administrator.Models.UserViewModel
 
-<h2>Edit the phone number of Model.Email</h2>
-
+<h2>Edit the email of </h2>
 
 @using (Html.BeginForm())
-{
+{ 
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PhoneNumber, "Phone Number", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Email, "Email", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
 
