Added edit agent availability page

--- a/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Admin/EditPhone.cshtml
+++ b/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Admin/EditPhone.cshtml
@@ -1,4 +1,4 @@
-﻿@model SMS.Web.Areas.Administrator.Models.UserViewModel
+﻿@model SMS.Web.Areas.Administrator.Models.EditUserViewModel
 
 <h2>Edit the phone number of @Model.Email</h2>
 
