--- a/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Admin/EditAvailability.cshtml
+++ b/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Admin/EditAvailability.cshtml
@@ -1,4 +1,4 @@
-﻿@model SMS.Web.Areas.Administrator.Models.UserViewModel
+﻿@model SMS.Web.Areas.Administrator.Models.EditUserViewModel
 
 <h2>Edit availability of @Model.Email</h2>
 
@@ -12,12 +12,9 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
+        <div class="form-group center-block">
             @Html.LabelFor(model => model.Availability, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Availability, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Availability, "", new { @class = "text-danger" })
-            </div>
+            @Html.DropDownListFor(model => model.Availability, new SelectList(Model.PossibleAvailabilities, Model.Availability), new { @class = "form-control" })
         </div>
 
         <div class="form-group">
