#14 Fixed current user profile link in header

--- a/SupportManagementSystem/SMS.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SupportManagementSystem/SMS.Web/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            <td>@Html.ActionLink(User.Identity.GetUserName(), "UserProfile", "Admin", new { area = "Administrator", id = User.Identity.GetUserId() }, null)</td>
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
