--- a/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Admin/Users.cshtml
+++ b/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Admin/Users.cshtml
@@ -36,6 +36,7 @@
                 </td>
 
                 <td>@Html.ActionLink("Edit", "Edit", "Admin", new { area = "Administrator" }, new { @class = "btn btn-success" })</td>
+                <td>@Html.ActionLink("Delete", "Delete", "Admin", new { area = "Administrator", id = user.Id }, new { @class = "btn btn-success" })</td>
             </tr>
         }
 </table>
