--- a/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Admin/EditAvailability.cshtml
+++ b/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Admin/EditAvailability.cshtml
@@ -45,6 +45,20 @@
     @Html.ActionLink("Back to Users", "Users", "Admin", new { area = "Administrator" }, null)
 </div>
 
+<script>
+    $(function(){
+        $('#To, #From').datetimepicker({
+            format: 'DD-MMM-YYYY HH:mm',
+            sideBySide: true,
+            showTodayButton: true
+        });
+    });
+</script>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/bootstrap-datetimepicker")
+    @Scripts.Render("~/Content/bootstrap-datetimepicker")
 }
+
+
