--- a/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Shared/_Layout.cshtml
+++ b/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Shared/_Layout.cshtml
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Support Management System</title>
     @Styles.Render("~/Content/css")
+    @RenderSection("styles", required: false)
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
 
 </head>
 <body>
@@ -44,7 +46,6 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
