#17 Added ReportController and moved CreateReport there

--- a/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Shared/_Layout.cshtml
+++ b/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                             @Html.ActionLink("Register Support Agent", "Register", "Account", new { area = "Administrator" }, htmlAttributes: new { id = "registerLink" })
                         </li>
                         <li>
-                            @Html.ActionLink("Report", "CreateReport", "Admin", new { area = "Administrator" }, null)
+                            @Html.ActionLink("Report", "Create", "Report", new { area = "Administrator" }, null)
                         </li>
                     }
                 </ul>
