--- a/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Report/All.cshtml
+++ b/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Report/All.cshtml
@@ -31,9 +31,7 @@
             @item.EndTime
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) 
         </td>
     </tr>
 }
