--- a/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Admin/Users.cshtml
+++ b/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Admin/Users.cshtml
@@ -4,6 +4,14 @@
 <h2>Support Agents</h2>
 <hr/>
 
+@using (Html.BeginForm())
+{
+    <p>
+        Find by email: @Html.TextBox("SearchString")
+        <input type="submit" value="Search" />
+    </p>
+}
+
 <table class="table table-responsive table-hover">
     <thead>
         <th>Email</th>
