#17 Fixed report page and removed report table from database

--- a/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Report/Create.cshtml
+++ b/SupportManagementSystem/SMS.Web/Areas/Administrator/Views/Report/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SMS.Web.Areas.Administrator.Models.CreateReportViewModel
+﻿@model SMS.Web.Areas.Administrator.Models.ReportViewModel
 
 <h2>Create Report</h2>
 
